<resources>
    <string name="app_name">MsgShareApp</string>
    <string name="show_toast">Show Toast</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="send_data_to_next_activity">Click to see received message</string>
    <string name="share_to_other_apps">Share to other Apps</string>
    <string name="recycler_view_demo">View Hobbies</string>
</resources>